# databricks-project

./: README.md
.github/workflows/: deploy.yml  tests.yml
databricks_project_bundle/dashboards/: deezer_top_tracks_last_30_days.lvdash.json
databricks_project_bundle/resources/: deezer_dashboard.lvdash.json  deezer_dashboard.yml  deezer_job.yml  weather_dashboard.lvdash.json  weather_job.yml
databricks_project_bundle/src/: weather_hourly_ingestor.py
databricks_project_bundle/src/constants/: weather_constants.py
databricks_project_bundle/tests/: test_weather_hourly_ingestor.py
hourly_weather_report/: .gitignore  README.md  databricks.yml  pyproject.toml
hourly_weather_report/resources/: weather_dashboard.lvdash.json  weather_dashboard.yml
hourly_weather_report/src/: __init__.py
hourly_weather_report/tests/: test_weather_hourly_ingestor.py
